--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ header .subtitle { font-size: 1.2rem; text-transform: uppercase; letter-spacing:
     border-radius: 50%;
     border: 4px solid #aaaaaa;
     object-fit: cover;
+    object-position: 50% 20%; /* Posunutí fotky */
     box-shadow: 0 10px 30px rgba(0,0,0,0.4);
     margin-bottom: 3rem;
 }
